--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -22,6 +22,9 @@ rules:
   '@typescript-eslint/no-unused-vars':
     - error
     - argsIgnorePattern: ^_
+  # See https://zenn.dev/teppeis/articles/2023-04-typescript-5_0-verbatim-module-syntax for enabling reason
+  '@typescript-eslint/consistent-type-imports': 'error'
+  '@typescript-eslint/no-import-type-side-effects': 'error'
 parser: '@typescript-eslint/parser'
 parserOptions:
   ecmaVersion: 12
