--- a/.github/workflows/ci-tool-versions.yml
+++ b/.github/workflows/ci-tool-versions.yml
@@ -12,12 +12,13 @@ jobs:
       - uses: actions/checkout@v3
       - run: git fetch origin ${{ github.base_ref }} --depth=1
       - name: Re-format only changed .tool-versions
+        if: ${{ github.actor == 'renovate[bot]' }}
         id: format-only-new-versions
         # Do not use `echo json=$(script)` syntax here. The script generates multilines.
         run: |
           tempfile="$(mktemp)"
           echo -n 'json=' | tee --append "$tempfile"
-          git diff origin/${{ github.base_ref }} HEAD --word-diff --relative ./examples/.tool-versions | grep -F '{+' | ruby -r json -e 'puts STDIN.each_line.map { |l| /\A(\S+\s+).*?\{\+([^\+]+)/.match(l).captures.join }.join("\n").to_json' | tee --append "$tempfile"
+          git diff origin/${{ github.base_ref }} HEAD --word-diff --relative ./examples/.tool-versions | grep -F ']{+' | ruby -r json -e 'puts STDIN.each_line.map { |l| /\A(\S+\s+).*?\{\+([^\+]+)/.match(l).captures.join }.join("\n").to_json' | tee --append "$tempfile"
           cat "$tempfile" | tee --append $GITHUB_OUTPUT
       - uses: asdf-vm/actions/install@v2
         with:
