--- a/.github/workflows/ci-tool-versions.yml
+++ b/.github/workflows/ci-tool-versions.yml
@@ -19,8 +19,9 @@ jobs:
         # Do not use `echo json=$(script)` syntax here. The script generates multilines.
         run: |
           git diff origin/${{ github.base_ref }} HEAD --word-diff --relative ./examples/.tool-versions | \
-          grep -F ']{+' | ruby -r json -e 'puts STDIN.each_line.map { |l| /\A(\S+\s+).*?\{\+([^\+]+)/.match(l).captures.join }.join("\n").to_json' | \
+          grep -F ']{+' | ruby -e 'puts STDIN.each_line.map { |l| /\A(\S+\s+).*?\{\+([^\+]+)/.match(l).captures.join }.join("\n")' | \
           gh-action-multiline -name=json >> "$GITHUB_OUTPUT"
       - uses: asdf-vm/actions/install@v2
         with:
-          tool_versions: '${{ fromJson(steps.format-only-new-versions.outputs.json) }}'
+          tool_versions: |
+            ${{ steps.format-only-new-versions.outputs.json }}
