--- a/.github/workflows/ci-nix.yml
+++ b/.github/workflows/ci-nix.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: DeterminateSystems/nix-installer-action@v4
       - uses: DeterminateSystems/magic-nix-cache-action@v2
-      - run: nix-build
+      - run: nix-shell --run 'echo This step should be done before any other "nix-shell" steps because of measuring Nix build time'
       - name: Log current versions
         run: nix-shell --run 'make versions'
       - run: nix-shell --run 'make setup'
