--- a/.github/workflows/ci-tool-versions.yml
+++ b/.github/workflows/ci-tool-versions.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           git diff origin/${{ github.base_ref }} HEAD --word-diff --relative ./examples/.tool-versions | \
           grep -F ']{+' | grep -vP 'haskell|php' | ruby -e 'puts STDIN.each_line.map { |l| /\A(\S+\s+).*?\{\+([^\+]+)/.match(l).captures.join }.join("\n")' | \
-          gh-action-multiline -name=json >> "$GITHUB_OUTPUT"
+          gh-action-multiline -name=json | tee -a "$GITHUB_OUTPUT"
       - uses: asdf-vm/actions/install@v2
         with:
           tool_versions: |
