--- a/.github/workflows/ci-tool-versions.yml
+++ b/.github/workflows/ci-tool-versions.yml
@@ -20,10 +20,10 @@ jobs:
         run: |
           targets="$(mktemp)"
           git diff origin/${{ github.base_ref }} HEAD --word-diff --relative ./examples/.tool-versions | \
-            grep -F ']{+' | grep -vP 'haskell|php' | ruby -e 'puts STDIN.each_line.map { |l| /\A(\S+\s+).*?\{\+([^\+]+)/.match(l).captures.join }.join("\n")' | \
-            gh-action-multiline -name=lines > "$targets"
+            grep -F ']{+' | grep -vP 'haskell|php' | ruby -e 'puts STDIN.each_line.map { |l| /\A(\S+\s+).*?\{\+([^\+]+)/.match(l).captures.join }.join("\n")' > "$targets"
 
-          cat "$targets" | tee -a "$GITHUB_OUTPUT"
+
+          gh-action-multiline -name=lines < "$targets" | tee -a "$GITHUB_OUTPUT"
           grep -P '\S' "$targets" || echo 'skip_install=true' | tee -a "$GITHUB_OUTPUT"
 
       - uses: asdf-vm/actions/install@v2
