This may be upstream bug

--- a/.github/workflows/ci-tool-versions.yml
+++ b/.github/workflows/ci-tool-versions.yml
@@ -27,7 +27,7 @@ jobs:
           grep -P '\S' "$targets" || echo 'skip_install=true' | tee -a "$GITHUB_OUTPUT"
 
       - uses: asdf-vm/actions/install@v2
+        if: steps.format-only-new-versions.outputs.skip_install != 'true'
         with:
           tool_versions: |
             ${{ steps.format-only-new-versions.outputs.lines }}
-          skip_install: ${{ steps.format-only-new-versions.outputs.skip_install == 'true' }}
