--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -27,6 +27,4 @@ rules:
   '@typescript-eslint/no-import-type-side-effects': 'error'
 parser: '@typescript-eslint/parser'
 parserOptions:
-  ecmaVersion: 12
-  sourceType: module
-  project: ./tsconfig.json
+  project: true
