Specify missing `eslint:recommended`

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,6 +4,7 @@ env:
 plugins:
   - '@typescript-eslint'
 extends:
+  - eslint:recommended
   - plugin:@typescript-eslint/strict-type-checked
   - plugin:@typescript-eslint/stylistic-type-checked
 rules:
