--- a/.github/workflows/ci-nix.yml
+++ b/.github/workflows/ci-nix.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: DeterminateSystems/magic-nix-cache-action@v2
       - run: nix-shell --run 'echo This step should be done before any other "nix-shell" steps because of measuring Nix build time'
       - name: Log current versions
-        run: nix-shell --run 'make versions'
+        run: nix-shell --run 'make deps'
       - run: nix-shell --run 'make setup'
       - name: Run linters
         run: nix-shell --run 'make check'
