--- a/.github/workflows/ci-official.yml
+++ b/.github/workflows/ci-official.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '18.15.0'
+          node-version-file: '.node-version'
           cache: npm
       - run: npm ci
       # renovate.json will always tested by the CLI
