--- a/.github/workflows/ci-crystal.yml
+++ b/.github/workflows/ci-crystal.yml
@@ -26,7 +26,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: crystal-lang/install-crystal@v1
         with:
+          # Keep same version as used in *.nix
           crystal: '1.8.2'
+          shards: '0.17.3'
       # Need node.js to install validator. Spec includes the validator runner
       - run: crystal spec --tag '~needs_npm'
   lint:
@@ -42,7 +44,9 @@ jobs:
           key: ameba-${{ runner.os }}-crystal_1.8.2-${{ hashFiles('shard.lock') }}
       - uses: crystal-lang/install-crystal@v1
         with:
+          # Keep same version as used in *.nix
           crystal: '1.8.2'
+          shards: '0.17.3'
       - run: shards install
         if: steps.cache.outputs.cache-hit != 'true'
       - run: make crystal-lint-check
