--- a/.github/workflows/lint-common.yml
+++ b/.github/workflows/lint-common.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: dprint/check@v2.2
         with:
-          # Keep same version as *.nix
+          # Keep same version as used in *.nix
           dprint-version: '0.37.1'
 
   typos:
