--- a/.github/workflows/lint-definition.yml
+++ b/.github/workflows/lint-definition.yml
@@ -21,6 +21,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: crystal-lang/install-crystal@v1
         with:
+          # Keep same version as used in *.nix
           crystal: '1.8.2'
+          shards: '0.17.3'
       - run: shards install --production
       - run: crystal run src/cli.cr -- lint
