Update tsconfig with using tsconfig/base again

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,6 @@
 {
-  // TODO: Use tsconfig/base after all tools support tsconfig.extends array
-  "extends": "./tsconfig.base.json",
+  "extends": ["@tsconfig/strictest/tsconfig", "@tsconfig/node18/tsconfig"],
   "compilerOptions": {
-    // https://www.typescriptlang.org/docs/handbook/esm-node.html
-    "module": "node16",
     "noEmit": true
   },
   "include": ["**/*.ts"]
