--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "re2": "^1.19.1",
     "renovate": "^36.19.2",
     "ts-node-test": "^0.4.1",
+    "tsx": "^3.12.7",
     "typescript": "^5.1.6"
   },
   "overrides": {
