--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "test": "glob -c \"node --loader tsx --no-warnings --test\" \"./test/**/*_test.ts\""
+  },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.0",
     "@tsconfig/strictest": "^2.0.1",
@@ -6,6 +9,7 @@
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "eslint": "^8.45.0",
+    "glob": "^10.3.3",
     "json5": "^2.2.3",
     "re2": "^1.19.1",
     "renovate": "^36.19.2",
