Replace ts-node-test with tsx

--- a/.github/workflows/ci-typescript.yml
+++ b/.github/workflows/ci-typescript.yml
@@ -31,4 +31,4 @@ jobs:
       - run: npm ci
       - run: npx tsc
       - run: make eslint-check
-      - run: npx ts-node-test test/*.ts
+      - run: npm test
