--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
+  "scripts": {
+    "test": "glob -c \"node --loader tsx --no-warnings --test\" \"./test/**/*_test.ts\""
+  },
   "devDependencies": {
+    "@tsconfig/node18": "^18.2.0",
+    "@tsconfig/strictest": "^2.0.1",
     "@types/node": "^18.17.0",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "eslint": "^8.45.0",
+    "glob": "^10.3.3",
     "json5": "^2.2.3",
     "re2": "^1.19.1",
     "renovate": "^36.19.2",
-    "ts-node-test": "^0.4.1",
+    "tsx": "^3.12.7",
     "typescript": "^5.1.6"
   },
   "overrides": {
