Need to specify module type since nodejs 20?

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "scripts": {
     "test": "glob -c \"node --loader tsx --no-warnings --test\" \"./test/**/*_test.ts\""
   },
