--- a/.ameba.yml
+++ b/.ameba.yml
@@ -3,6 +3,10 @@
 # The point is for the user to remove these configuration records
 # one by one as the reported problems are removed from the code base.
 
+# Personally I want to disable all `Metrics` linters. But ameba looks haven't the feature :<
+Metrics/CyclomaticComplexity:
+  Enabled: false
+
 # Problems found: 8
 # Run `ameba --only Style/VariableNames` for details
 Style/VariableNames:
