--- a/.github/workflows/ci-crystal.yml
+++ b/.github/workflows/ci-crystal.yml
@@ -8,6 +8,7 @@ on:
       - '**/*.ecr'
       - 'shard.yml'
       - 'shard.lock'
+      - '.ameba.yml'
       - '.tool-versions'
   pull_request:
     paths:
@@ -16,6 +17,7 @@ on:
       - '**/*.ecr'
       - 'shard.yml'
       - 'shard.lock'
+      - '.ameba.yml'
       - '.tool-versions'
 
 jobs:
