--- a/.github/workflows/ci-typescript.yml
+++ b/.github/workflows/ci-typescript.yml
@@ -30,5 +30,15 @@ jobs:
           cache: npm
       - run: npm ci
       - run: npx tsc
-      - run: make eslint-check
       - run: npm test
+
+  lint:
+    timeout-minutes: 15
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: denoland/setup-deno@v1
+        with:
+          # Keep same version as used in *.nix
+          deno-version: '1.35.1'
+      - run: deno lint
