--- a/.github/workflows/ci-typescript.yml
+++ b/.github/workflows/ci-typescript.yml
@@ -9,6 +9,7 @@ on:
       - '**/*.json5'
       - 'test/**'
       - '.tool-versions'
+      - 'deno.jsonc'
   pull_request:
     paths:
       - '.github/workflows/ci-typescript.yml'
@@ -17,6 +18,7 @@ on:
       - '**/*.json5'
       - 'test/**'
       - '.tool-versions'
+      - 'deno.jsonc'
 
 jobs:
   test:
