--- a/.github/workflows/ci-nix.yml
+++ b/.github/workflows/ci-nix.yml
@@ -27,9 +27,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: DeterminateSystems/nix-installer-action@v4
       - uses: DeterminateSystems/magic-nix-cache-action@v2
-      - run: nix-shell --run 'echo This step should be done before any other "nix-shell" steps because of measuring Nix build time'
-      - name: Log current versions
-        run: nix-shell --run 'make deps'
-      - run: nix-shell --run 'make setup'
-      - name: Run linters
-        run: nix-shell --run 'make check'
+      - run: nix flake check
+      - run: nix develop --command echo 'This step should be done before any other "nix develop" steps because of measuring Nix build time'
+      - run: nix develop --command make deps
+      - run: nix develop --command make setup
+      - run: nix develop --command make check
