--- a/.github/workflows/ci-crystal.yml
+++ b/.github/workflows/ci-crystal.yml
@@ -28,9 +28,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: crystal-lang/install-crystal@v1
         with:
-          # Keep same version as used in *.nix
-          crystal: '1.9.2'
-          shards: '0.17.3'
+          crystal: '1.9.2' # selfup { "regex": "\\d[^']+", "script": "crystal --version | head -n 1 | cut -d ' ' -f 2" }
+          shards: '0.17.3' # selfup { "regex": "\\d[^']+", "script": "shards --version | cut -d ' ' -f 2" }
       # Need node.js to install validator. Spec includes the validator runner
       - run: crystal spec --tag '~needs_npm'
   lint:
@@ -39,6 +38,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Crystal Ameba Linter
+        # Accepts to be different with nixpkgs's ameba, use latest by renovatebot
         uses: crystal-ameba/github-action@v0.8.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
