--- a/.github/workflows/lint-common.yml
+++ b/.github/workflows/lint-common.yml
@@ -17,14 +17,14 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dprint/check@v2.2
         with:
-          # Keep same version as used in *.nix
-          dprint-version: '0.40.2'
+          dprint-version: '0.40.2' # selfup { "regex": "\\d[^']+", "script": "dprint --version | cut -d ' ' -f 2" }
 
   typos:
     timeout-minutes: 5
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      # Accepts to be different with nixpkgs, use latest by renovatebot
       - uses: crate-ci/typos@v1.16.15
         with:
           files: |
