--- a/.github/workflows/lint-definition.yml
+++ b/.github/workflows/lint-definition.yml
@@ -21,8 +21,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: crystal-lang/install-crystal@v1
         with:
-          # Keep same version as used in *.nix
-          crystal: '1.9.2'
-          shards: '0.17.3'
+          crystal: '1.9.2' # selfup { "regex": "\\d[^']+", "script": "crystal --version | head -n 1 | cut -d ' ' -f 2" }
+          shards: '0.17.3' # selfup { "regex": "\\d[^']+", "script": "shards --version | cut -d ' ' -f 2" }
       - run: shards install --production
       - run: crystal run src/cli.cr -- lint
